tests/types/result/errors/test_err_wrong_err_type.sushi
# Tests error for wrong Err type
# EXPECT_ERROR_CODE: CE2039

enum ErrorA:
    Error

enum ErrorB:
    Error

fn test_func() i32 | ErrorA:
    return Result.Err(ErrorB.Error)

fn main() i32:
    return Result.Ok(0)
